fix: logo is not showing

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -47,3 +47,15 @@ footer {
     }
   }
 }
+
+[data-theme="light"] {
+  footer {
+    .brand-container {
+      .brand {
+        img {
+          filter: brightness(0);
+        }
+      }
+    }
+  }
+}
