--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -47,3 +47,15 @@ nav {
     }
   }
 }
+
+[data-theme="light"] {
+  nav {
+    .brand-container {
+      .brand {
+        img {
+          filter: brightness(0);
+        }
+      }
+    }
+  }
+}
